style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,900;1,100;1,300;1,500&display=swap');

* {
    box-sizing: border-box;
    margin: 0;
}

:root {
    --text: #111023;
    --background: #e0e0f1;
    --primary: #5c57b2;
    --secondary: #cfcee9;
    --accent: #5c57b2; 
    --hover:#464386; 
}

body {
    font-family: 'Roboto', sans-serif;
}

header, footer, section {
    border: 1px solid black;
}


#about-me,
#projects,
footer {
    padding: 30px;
}

header {
    background-color: var(--secondary);
    padding: 20px 30px;
   
    color: var(--text);
    font-size: 10px;
    
    border: 0px;
}

#about-me {
    background-color: var(--background);
    color: var(--text);

    border: 0px;

    display: grid;
    gap: 20px;
}

.about-me-card {
    background-color: white;
    overflow: hidden;

    border: 0px;
    border-radius: 10px;
    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;

    display: grid;
    grid-template-columns: auto 1fr;
}

.about-me-card img {
    width: 300px;
    height: 100%;
    object-fit: cover;
}

#about-me-details {
    padding: 30px;
    display: grid;
    align-content: center;
    gap: 15px;
}

#about-me-description {
    line-height: 25px;
}

#about-me-details button {
    border: 0px;
    border-radius: 4px;
    padding: 10px 15px;
    background-color: var(--accent);
    color: white;
    font-weight: 500;
}

#about-me-details button:hover {
    background-color: var(--hover);
}

#projects {
    background-color: var(--background);
    color: var(--text);

    border: 0px;

    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
    grid-template-rows: auto 1fr;
    gap: 20px;
}

#works {
    grid-row: 1 / 2;
    grid-column: 1 / -1;
}

.project-card {
    background-color: white;

    overflow: hidden;
    border-radius: 10px;
    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
}

.project-screenshot {
    width: 100%;

    object-fit: contain;
}

.icon {
    height: 20px;
    width: 20px;
}

.project-details {
    display: grid;
    grid-template-columns: 1fr auto auto;
    gap: 10px;

    padding: 30px 30px 30px 30px;
}

.description {
    grid-column: 1 / -1;
    line-height: 25px;
}

footer {
    border: 0px;

    display: grid;
    grid-template-columns: 1fr auto; 

    background-color: var(--secondary);
    color: var(--text);
}

.contact-details {
    padding: 20px;
    display: grid;
    gap: 20px
}

.call-to-action,
.grid-column,
.phone,
.email,
ul {
    grid-column: 1 / 2;
}

footer img {
    width: 300px;
}

.address {
    grid-column: 1 / 2;
}

.phone, .email {
    display: flex;
    gap: 15px;
    align-items: center;
}

ul {
    padding: 0px;
    display: grid;
    grid-template-columns: repeat(3, auto);
    justify-content: start;
    gap: 15px;
    list-style: none;
}

@media (max-width: 450px) {
    #projects {
        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
    }
}

@media (max-width: 641px) {
    .about-me-card,
    footer {
        grid-template-columns: 1fr;
    }

    #about-me-description {
        line-height: 30px;
    }

    .about-me-card img,
    footer img {
        width: 100%;
    }
}

